# Erdogdu_2026_synthesis_rate

./: .gitignore  LICENSE  README.md  pyproject.toml
TTseq_synthesis_rates/: CalcSynthesisRates.py  Snakefile
TTseq_synthesis_rates/data/BRD234_inhibition/: alternative.cross.contamination.RData  alternative.sequencing.depth.RData  bam.files.RData  bam.files.mat.RData
TTseq_synthesis_rates/data/BRD2_AID/: alternative.cross.contamination.RData  alternative.sequencing.depth.RData  bam.files.RData  bam.files.mat.RData  database.merge.htseq.RPKs.antisense.corrected.RData
TTseq_synthesis_rates/scripts/: compute_synthesis_rates_spikeinMedian.R
